TP-1194 adjust instuctions button wrapping issue

--- a/public/themes/custom/palvelumanuaali/components/01-atoms/forms/_service-forms.scss
+++ b/public/themes/custom/palvelumanuaali/components/01-atoms/forms/_service-forms.scss
@@ -217,6 +217,9 @@
     @include xl {
       grid-column: 1/2;
       grid-row: 3;
+      margin-top: -92px;
+    }
+    @media (min-width:1470px) {
       margin-top: -68px;
     }
   }
@@ -235,6 +238,9 @@
     @include xl {
       grid-column: 1/2;
       grid-row: 3;
+      margin-top: -92px;
+    }
+    @media (min-width:1470px) {
       margin-top: -68px;
     }
   }
